# fluxa-desktop

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  index.html  nuvioapi.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  warm-windows-angle-cache.yml
scripts/: bump-version.sh  gen-core-methods.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  build.rs  fetch-libmpv.sh  tauri.conf.json
src-tauri/assets/mpv-shaders/anime4k/: Anime4K_Upscale_CNN_x2_L.glsl  Anime4K_Upscale_CNN_x2_M.glsl  Anime4K_Upscale_CNN_x2_S.glsl
src-tauri/capabilities/: default.json
src-tauri/examples/: egl_diag.rs
src-tauri/examples/plugin_spike/: dom_bridge.rs  main.rs
src-tauri/icons/: icon.icns
src-tauri/patches/tauri-runtime-wry-2.11.2/src/: undecorated_resizing.rs
src-tauri/plugins/tauri-plugin-libmpv/src/: desktop.rs
src-tauri/src/: airplay.rs  artwork.rs  cast.rs  cast_proxy.rs  chromecast.rs  custom_fonts.rs  discord_presence.rs  downloads.rs  lib.rs  libvlc_render.rs  linux_player_surface.rs  linux_vulkan.rs  linux_wayland_subsurface.rs  macos_player_surface.rs  macos_vulkan.rs  main.rs  mpv_render.rs  net_guard.rs  oauth.rs  playback_engine.rs  player.rs  poster_cache.rs  roku.rs  sleep_inhibitor.rs  storage.rs  trailer_proxy.rs  windows_d3d11.rs  windows_egl.rs  windows_player_surface.rs  windows_vulkan.rs  youtube_trailer.rs
src-tauri/src/mpv_render/: api.rs  platform_gl.rs
src-tauri/src/player/: player_preferences.rs  subtitles.rs
src-tauri/src/plugin_runtime/: crypto_bridge.rs  dom_bridge.rs  mod.rs
src/components/: AddonAddedDialog.tsx  CollectionShelfRow.tsx  ContentTypeFilter.tsx  ContinueCard.tsx  ContinueWatchingRow.tsx  DiscoverDetailPanel.tsx  ErrorBoundary.tsx  FilterDropdown.tsx  GlobalSearchBar.tsx  HeroSection.tsx  MovieCard.tsx  NavSidebar.tsx  NuvioStatusBanner.tsx  OfflineBanner.tsx  P2PDialog.tsx  PinPrompt.tsx  PlayerLoadingOverlay.tsx  ProfileChip.tsx  ReactPlayerOverlay.tsx  ShelfRow.tsx  StreamList.tsx  ThisWeekRow.tsx  Toast.tsx  UpdateModal.tsx  VirtualizedPosterGrid.tsx
src/core/: addonEffects.ts  addonManifest.ts  addons.ts  anilistExternalSync.ts  animeDetection.ts  animeExternalSync.ts  appPrefs.ts  authEffects.ts  cast.ts  catalogEffects.ts  collectionSources.ts  collections.ts  continueWatchingUtils.ts  contracts.ts  coreMethods.ts  customFonts.ts  detailEffects.ts  discordPresence.ts  effectRunner.ts  engine.ts  engineExternalSync.ts  (+45 more)
(+75 files in other folders)
