[package]
name = "fluxa-desktop"
version = "0.1.12"
edition = "2021"

[lib]
name = "fluxa_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fluxa-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-libmpv = { path = "plugins/tauri-plugin-libmpv" }
aes-gcm = "0.10"
base64 = "0.22"
libc = "0.2"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
fluxa_core = { path = "../../fluxa-core", default-features = false }
fluxa_streaming_engine = { path = "../../fluxa-core/fluxa-streaming-engine" }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gdkx11 = "0.18"
x11 = { version = "2.18", features = ["xlib"] }
glib = "0.18"
gdk-pixbuf = "0.18"
webkit2gtk = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_ColorSystem",
    "Win32_UI_WindowsAndMessaging",
] }
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[patch.crates-io]
tauri-runtime-wry = { path = "patches/tauri-runtime-wry-2.11.2" }

[profile.release]
# Must stay "unwind" — fluxa_core's ffi::core_invoke (and the FluxaCore calls
# in this crate) catch_unwind so a panic in core business logic becomes a
# safe error/null return instead of aborting the whole app. "abort" would
# silently defeat that.
panic = "unwind"
lto = "thin"
strip = true
opt-level = "s"
